Try to fix glitch on mobile where icons are blue

--- a/assets/css/icon-button.css
+++ b/assets/css/icon-button.css
@@ -7,6 +7,7 @@
     font-family: sans-serif;
     font-size: 20px;
     cursor: pointer;
+    color: black;
 }
 
 .icon-button:hover {
